--- a/apps/templates/accounts/register_kendaraan.html
+++ b/apps/templates/accounts/register_kendaraan.html
@@ -7,8 +7,10 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0/css/bootstrap.min.css" rel="stylesheet">
 {% endblock stylesheets %}
 
+{% include 'includes/navigation.html' %}
+
 {% block content %}
-<main class="container mt-5">
+<main class="container mt-5 pt-5"> <!-- note to self = M IS MARGIN PADDING IS P, T IS TOP STOP ETC FORGETTING IT -->
     {% include 'includes/preloader.html' %}
     
     <div class="row justify-content-center">
@@ -65,7 +67,7 @@
     </div>
 </main>
 {% endblock content %}
-z
+
 <!-- Specific Page JS goes HERE  -->
 {% block javascripts %}
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0/js/bootstrap.bundle.min.js"></script>
