--- a/apps/templates/accounts/register_kendaraan.html
+++ b/apps/templates/accounts/register_kendaraan.html
@@ -7,10 +7,12 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0/css/bootstrap.min.css" rel="stylesheet">
 {% endblock stylesheets %}
 
+{% set nav_background = true %}
+
 {% include 'includes/navigation.html' %}
 
 {% block content %}
-<main class="container mt-5 pt-5"> <!-- note to self = M IS MARGIN PADDING IS P, T IS TOP STOP ETC FORGETTING IT -->
+<main class="container mt-5 pt-6"> <!-- note to self = M IS MARGIN PADDING IS P, T IS TOP STOP ETC FORGETTING IT -->
     {% include 'includes/preloader.html' %}
     
     <div class="row justify-content-center">
