--- a/apps/templates/includes/navigation.html
+++ b/apps/templates/includes/navigation.html
@@ -1,5 +1,6 @@
 <header class="header-global">
-    <nav id="navbar-main" aria-label="Primary navigation" class="navbar navbar-main navbar-expand-lg navbar-dark" style="background-color: rgba(28, 37, 64, 0.7); padding: 0.5rem 1rem;">        <div class="container">
+    <nav id="navbar-main" aria-label="Primary navigation" class="navbar navbar-main navbar-expand-lg navbar-theme-primary navbar-dark {% if request.path == url_for('pemesanan_blueprint.register_kendaraan') %}bg-dark{% else %}bg-opacity-20{% endif %}">        
+        <div class="container">
             <!-- Logo -->
             <a class="navbar-brand me-md-3" href="{{ url_for('home_blueprint.index') }}">
                 <img class="navbar-brand-dark logo" src="/static/assets/img/brand/light.svg" alt="Logo light">
@@ -43,17 +44,17 @@
 <style>
 /* Custom logo size */
 .navbar-brand .logo {
-    height: 30px; /* Adjust the height of the logo */
-    width: auto; /* Keep the aspect ratio */
+    height: 30px;
+    width: auto;
 }
 
-/* Ensure nav items are aligned properly */
+
 .navbar-nav .nav-link {
-    font-size: 0.9rem; /* Slightly smaller font size for compact look */
-    padding: 0.5rem 1rem; /* Padding adjustment */
+    font-size: 0.9rem;
+    padding: 0.5rem 1rem;
 }
 
-/* Center items vertically */
+
 .navbar-brand,
 .navbar-nav .nav-link {
     display: flex;
@@ -61,6 +62,14 @@
 }
 
 .navbar-toggler {
-    padding: 0.25rem 0.75rem; /* Adjust padding for the mobile toggle button */
+    padding: 0.25rem 0.75rem;
 }
+
+.bg-transparent {
+        background-color: rgba(28, 37, 64, 0.2);
+    }
+
+.bg-solid {
+        background-color: rgba(28, 37, 64, 1);
+    }
 </style>
