--- a/apps/templates/accounts/register_kendaraan.html
+++ b/apps/templates/accounts/register_kendaraan.html
@@ -12,7 +12,7 @@
 {% include 'includes/navigation.html' %}
 
 {% block content %}
-<main class="container mt-5 pt-6"> <!-- note to self = M IS MARGIN PADDING IS P, T IS TOP STOP ETC FORGETTING IT -->
+<main class="container mt-5 pt-6 mb-5"> <!-- note to self = M IS MARGIN PADDING IS P, T IS TOP STOP ETC FORGETTING IT -->
     {% include 'includes/preloader.html' %}
     
     <div class="row justify-content-center">
@@ -68,6 +68,9 @@
         </div>
     </div>
 </main>
+
+{% include 'includes/footer.html' %}
+
 {% endblock content %}
 
 <!-- Specific Page JS goes HERE  -->
