--- a/apps/templates/includes/footer.html
+++ b/apps/templates/includes/footer.html
@@ -1,4 +1,4 @@
-    <footer class="footer pt-6 pb-5 bg-dark text-white">
+    <footer class="footer pt-6 pb-6 bg-dark text-white">
         <div class="container">
             <div class="row d-flex justify-content-between">
                 <div class="col-md-4">
@@ -52,6 +52,6 @@
                                 href="https://github.com/themesberg/pixel-bootstrap-ui-kit/issues">Support</a></li>
                     </ul>
                 </div>
-            <hr class="bg-secondary my-3 my-lg-5">
+            </div>
         </div>
     </footer>
