add Pemesanan jasa, edit nav to go 20% opacity at index and not anywhere else. add title for register kendaraan

--- a/apps/templates/accounts/register_kendaraan.html
+++ b/apps/templates/accounts/register_kendaraan.html
@@ -1,3 +1,7 @@
+<title>
+    Daftar Kendaraan
+</title>
+
 {% extends "layouts/base-fullscreen.html" %}
 
 {% block title %} Daftarkan Kendaraan {% endblock %}
@@ -10,6 +14,7 @@
 {% set nav_background = true %}
 
 {% include 'includes/navigation.html' %}
+
 
 {% block content %}
 <main class="container mt-5 pt-6 mb-5"> <!-- note to self = M IS MARGIN PADDING IS P, T IS TOP STOP ETC FORGETTING IT -->
