--- a/apps/templates/accounts/create-profile.html
+++ b/apps/templates/accounts/create-profile.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
-        <title>Profil</title>
-        
+        <title>Edit Profile</title>
         {% extends "layouts/base-fullscreen.html" %}
         
-        {% block title %} Profil {% endblock %}
+        {% block title %} Edit Profil {% endblock %}
         
         {% block stylesheets %}
             <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0/css/bootstrap.min.css" rel="stylesheet">
         {% endblock stylesheets %}
         
         {% include 'includes/navigation.html' %}
+    
     </head>
     
+    
     <body>
+    
         {% block content %}
         <main class="container mt-5 pt-6 mb-5">
         
@@ -24,32 +27,46 @@
                 <div class="container-content">
                     <h2>Profil</h2>
                     <form method="POST" class="border p-4 shadow-sm rounded">
+                        {{ form.hidden_tag() }}
                         <div class="pp">
                             <div class="img-profile">
                                 <img src="static\assets\img\zeusProfile.jpg" class="profileImg" alt="Profile Picture">
                             </div>
+                            
+                            <div class="button-profile">
+                                <button type="button" class="btn btn-primary">Ganti Foto</button>
+                                <button type="button" class="btn btn-delete-pic" style="background-color: #dc3545; color: white;">Hapus Foto</button>
+                            </div>
+        
                         </div>
                         <div class="form-group">
                             <div class="usernames-group">
                                 <div class="f-name">
                                     <label for="first-name">Nama depan</label>
-                                    <input type="text" class="form-control" name="first-name" id="first-name" aria-describedby="helpId" required placeholder="Nama depan">
+                                    {{ form.namaDepan(class="form-control") }}
                                 </div>
                                 <div class="l-name">
                                     <label for="last-name">Nama belakang</label>
-                                    <input type="text" class="form-control" name="last-name" id="last-name" aria-describedby="helpId" required placeholder="Nama belakang">
+                                    {{ form.namaBelakang(class="form-control") }}
                                 </div>
                                 
                             </div>
-        
-                            <label for="address">Alamat</label>
+                            
+                            <label for="sex">Jenis Kelamin</label>
+                            {{ form.sex(class="form-control") }}
+
+                            
+                            <!-- <label for="address">Alamat</label>
                             <input type="text" class="form-control" name="address" id="address" aria-describedby="helpId" required placeholder="Alamat">
                             
                             <label for="email">Email</label>
                             <input type="email" class="form-control" name="email" id="email" aria-describedby="helpId" required placeholder="Email">
                             
                             <label for="phone">Nomor Telepon</label>
-                            <input type="tel" class="form-control" name="phone" id="phone" aria-describedby="helpId" required placeholder="Nomor telepon">
+                            <input type="tel" class="form-control" name="phone" id="phone" aria-describedby="helpId" required placeholder="Nomor telepon"> -->
+                        </div>
+                        <div class="button-save-changes">
+                            {{ form.submit(class="btn btn-primary") }}
                         </div>
                     </form>
                 </div>
@@ -140,5 +157,4 @@
             <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0/js/bootstrap.bundle.min.js"></script>
         {% endblock javascripts %}
     </body>
-    
 </html>
