--- a/apps/templates/accounts/register.html
+++ b/apps/templates/accounts/register.html
@@ -38,7 +38,7 @@
                                     {{ form.hidden_tag() }}
 
                                     <div class="form-group mb-4">
-                                        <label for="email">Username</label>
+                                        <label for="username">Username</label>
                                         <div class="input-group">
                                             <span class="input-group-text" id="basic-addon1"><span class="fas fa-user"></span></span>
                                             {{ form.username(class="form-control") }}
@@ -50,6 +50,13 @@
                                         <div class="input-group">
                                             <span class="input-group-text" id="basic-addon3"><span class="fas fa-envelope"></span></span>
                                             {{ form.email(class="form-control", type="email") }}
+                                        </div>  
+                                    </div>
+                                    <div class="form-group mb-4">
+                                        <label for="nomorHandphone">Nomor HP</label>
+                                        <div class="input-group">
+                                            <span class="input-group-text" id="basic-addon3"><span class="fas fa-envelope"></span></span>
+                                            {{ form.nomorHp(class="form-control") }}
                                         </div>  
                                     </div>
                                     <!-- End of Form -->
