--- a/apps/templates/includes/navigation.html
+++ b/apps/templates/includes/navigation.html
@@ -16,7 +16,7 @@
                 <ul class="navbar-nav ms-auto">
                     {% if current_user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><i class="far fa-user-circle me-2"></i>Profile</a>
+                            <a class="nav-link" href="{{ url_for('home_blueprint.profile') }}"><i class="far fa-user-circle me-2"></i>Profile</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('pemesanan_blueprint.register_kendaraan') }}"><i class="fas fa-car me-2"></i>Tambah Kendaraan</a>
