--- a/apps/templates/home/Pemesanan-jasa.html
+++ b/apps/templates/home/Pemesanan-jasa.html
@@ -1,3 +1,5 @@
+<title>Pesan jasa</title>
+
 {% extends "layouts/base-fullscreen.html" %}
 
 {% block title %} Pemesanan Jasa {% endblock %}
@@ -45,8 +47,8 @@
         </div>
 
         <div class="mb-3">
-            <label for="keterangan" class="form-label">Keterangan Tambahan</label>
-            <textarea class="form-control" id="keterangan" rows="3" placeholder="Tuliskan keterangan tambahan jika ada"></textarea>
+            <label for="keterangan" class="form-label">Keluhan</label>
+            <textarea class="form-control" id="keterangan" rows="3" placeholder="Isi keluhan disini (opsional)"></textarea>
         </div>
 
         <button type="submit" class="btn btn-primary w-100">Pesan Service</button>
