--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -66,6 +66,20 @@
 <!-- Bootrap icons CSS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
 
+{% block content %}
+    <!-- Flash message alert -->
+    {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            <script>
+                window.onload = function() {
+                    alert("{{ messages[0][1] }}");  // Tampilkan flash message dalam alert
+                };
+            </script>
+        {% endif %}
+    {% endwith %}
+
+{% endblock content %}
+
 
 
 <!-- aos -->
