penambahan login bengkel

--- a/apps/templates/includes/footer.html
+++ b/apps/templates/includes/footer.html
@@ -49,7 +49,7 @@
                         <li><a target="_blank" href="https://themesberg.com/licensing">License</a>
                         </li>
                         <li><a target="_blank"
-                                href="https://github.com/themesberg/pixel-bootstrap-ui-kit/issues">Support</a></li>
+                                href="{{url_for('authentication_blueprint.loginBengkel')}}">Bengkel</a></li>
                     </ul>
                 </div>
             </div>
